--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=dyqwPE"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=dyqwPE" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=H8p8Re"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=H8p8Re" type="text/css">
 
   
   
@@ -49,11 +49,11 @@
 				</div>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black show display-4" href="https://mobiri.se">Home</a></li><li class="nav-item dropdown">
-						<a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">About</a><div class="dropdown-menu" aria-labelledby="dropdown-477"><a class="text-black dropdown-item text-primary display-4" href="page1.html" target="_blank">Tentang Commtalks</a><a class="text-black dropdown-item display-4" href="https://mobiri.se">Gallery</a><a class="text-black dropdown-item display-4" href="https://mobiri.se">Team</a></div>
+				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black show text-primary display-4" href="index.html#slider04-m">Home</a></li><li class="nav-item dropdown">
+						<a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">About</a><div class="dropdown-menu" aria-labelledby="dropdown-477"><a class="text-black dropdown-item text-primary display-4" href="page3.html#article09-r" target="_blank">Tentang Commtalks</a><a class="text-black dropdown-item display-4" href="https://mobiri.se">Team</a></div>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link text-black dropdown-toggle show display-4" href="https://mobiri.se" aria-expanded="true" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Activity</a><div class="dropdown-menu show" aria-labelledby="dropdown-313" data-bs-popper="none"><a class="text-black show dropdown-item display-4" href="https://mobiri.se">PKM 2025</a><a class="text-black show dropdown-item display-4" href="https://mobiri.se">Info Kegiatan</a></div>
+						<a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Activity</a><div class="dropdown-menu" aria-labelledby="dropdown-313"><a class="text-black show dropdown-item text-primary display-4" href="page2.html#features038-z" target="_blank">Info Kegiatan</a></div>
 					</li></ul>
 				<div class="icons-menu">
 					<a class="iconfont-wrapper" href="https://wa.me/62 81299024169">
@@ -62,7 +62,7 @@
 					<a class="iconfont-wrapper" href="mailto:hairul.chandra@student.tau.ac.id">
 						<span class="p-2 mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
 					</a>
-					<a class="iconfont-wrapper" href="https://mobiri.se">
+					<a class="iconfont-wrapper" href="index.html#contacts02-j">
 						<span class="p-2 mbr-iconfont mobi-mbri-map-pin mobi-mbri"></span>
 					</a>
 					
@@ -80,8 +80,7 @@
     <div class="container-fluid">
         <div class="row mb-5 justify-content-center">
             <div class="col-12 content-head">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                    <strong>COMMTALKS</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"></h3>
                 <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-5">Your Journey Starts with Communication</h5>
             </div>
         </div>
@@ -172,7 +171,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wlRuo9s82UvSgcZKNQEVkzmN9SVJT9RbOVgPTEnReatF1vt4o7EcigS+uE9fWEcsjDB4M0jxQsM6/ukPyYYdkGAvlRsKnAgsJgkhji7cw3l1WaENHyKlmRyOicLEZCTf">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r93ScvXGvyqsoXGufwicm6uDK401KkonsKJKS+1EBecUSPwZ85pEHyg5wJlhR22QQgGqQmcZXmSzQh43Huu86dbi9DraE3mnqHP+jn19es4kn2wPUozXI5NGNhcq9/97">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -253,7 +252,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
